--- a/src/ads.properties
+++ b/src/ads.properties
@@ -2,6 +2,7 @@
 api.adwords.developerToken=QJGTQL3a4U5UID48hQjDHw
 api.adwords.clientId=955320384157-poo08ek3dl0b08punh6927icg776meti.apps.googleusercontent.com
 api.adwords.clientSecret=JxOEA8tl_FdtndbWZzhMunIg
-api.adwords.clientCustomerId=428-359-8307
-api.adwords.refreshToken=1/dS3SEN_u8NzIqAIq53vyejdrpIxxK7MwBCQa4GMwKSI
+#api.adwords.clientCustomerId=428-359-8307
+api.adwords.clientCustomerId=152-074-5633
+api.adwords.refreshToken=1/J2xdkANzLEc18THFUgJe9hp4f0TiyemQ0J4LIlscOiw
 api.adwords.userAgent=Digicom
